# multi_agent_ai_music_producer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
config/: settings.yaml
k8s/helm/music-producer/: .helmignore  Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
k8s/helm/music-producer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  job.yaml  networkpolicy.yaml  pdb.yaml  prometheusrules.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
notebooks/: colab_test.ipynb  music_producer.ipynb
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  analysis.py  base.py  critic.py  director.py  mastering.py  production.py
src/api/: __init__.py  server.py
src/graph/: __init__.py  nodes.py  routing.py  workflow.py
src/jobs/: __init__.py  runner.py
src/llm/: __init__.py  anthropic_provider.py  base.py  huggingface_provider.py  ollama_provider.py  openai_provider.py
src/logging/: __init__.py  llm_tracer.py  logger.py  progress.py
src/state/: __init__.py  reducers.py  schemas.py  validation.py
src/tools/: __init__.py  audio_analysis.py  audio_generation.py  audio_io.py  audio_processing.py
src/utils/: __init__.py  audio.py  device.py  prompts.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_integration_hf.py  test_state.py  test_tools.py  test_workflow.py
